glpi/k8s/kubectl/glpi/40-glpi-ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: glpi-ingress
  namespace: glpi
  labels:
    app.kubernetes.io/name: glpi
    app.kubernetes.io/instance: glpi-glpi
    app.kubernetes.io/version: "9.4.5"
    app.kubernetes.io/component: application
    app.kubernetes.io/part-of: glpi
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  rules:
    - host: glpi.localdomain
      http:
        paths:
          - path: /
            backend:
              serviceName: glpi-service
              servicePort: 80
    - host: glpi.${VM_NAME}.localdomain
      http:
        paths:
          - path: /
            backend:
              serviceName: glpi-service
              servicePort: 80
status:
  loadBalancer:
    ingress:
      - ip: 192.168.1.90
